# gemeinschaft

./: .dockerignore  .env.example  .flake8  .gitignore  DIAGRAM.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  sample.md  temp.py
app/: entrypoint.sh  requirments.txt  server.py
docs/: BUILD_AND_DEPLOY.md
environment/: entrypoint.sh  server.py
frontend/: Dockerfile  README.md  admin.html  admin.js  app.js  index.html  nginx.conf  package-lock.json  package.json  styles.css  tsconfig.json
gemeinschaft.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: __init__.py  dev.py  migrate.py
secrets/: README.md  auth_users.json.example  jwt_private_keys.json.example  jwt_public_keys.json.example
services/: __init__.py
tests/: test_agent_runtime_api.py  test_agent_runtime_client.py  test_app_factory_shutdown.py  test_batch_turn_approval_api.py  test_batch_turn_approval_service.py  test_context_packet_api.py  test_context_packet_builder.py  test_conversation_loop_api.py  test_conversation_scope_auth.py  test_conversation_scope_service.py  test_conversation_start_api.py  test_conversation_start_service.py  test_data_ingestion_auth_scope.py  test_data_ingestion_embed_api.py  test_data_ingestion_list_sources_api.py  test_data_ingestion_process_api.py  test_data_ingestion_topics_api.py  test_data_ingestion_upload_api.py  test_dev_runner.py  test_embedding_worker.py  test_event_export_api.py  test_event_export_service.py  test_event_history_api.py  test_event_history_service.py  test_event_store.py  test_loop_runner.py  (+47 more)
(+128 files in other folders)
